# bswap

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  bswap.1  bswap.c  bswap.info  bswap.lsm  bswap.lsm.in  bswap.spec  bswap.spec.in  bswap.texinfo  configure  configure.in  errmsg.h  groups  nswapm.c  project.config  system.h  xmalloc.c
